syntax = "proto3";

package mcs;

service MultiCastService {
    rpc listen (stream Payload) returns (ListenerResponse);
}

enum PayloadType {
    AUDIO_COMBINED = 0;
    AUDIO_SPLIT = 1;
    AUDIO_START = 2;
    AUDIO_STOP = 3;
    AUDIO_END = 4;
    EVENT_DATA = 5;
}

message  Payload {
    string uuid = 1; // call leg id
    PayloadType payload_type = 2;
    uint64 timestamp = 3; // time stamp when audio was captured
    bytes audio = 4; // audio bytes, in combined stereo format
    bytes audio_left = 5; // audio bytes, left channel
    bytes audio_right = 6; // audio bytes, right channel
    string event_data = 7; // event metadata in json form
}

message ListenerResponse {
    bool ok = 1;
}